force-app/main/default/objects/Case_Team__c/Case_Team__c.object-meta.xml
<CustomObject>
    <description>Used to identify groups of support techs across all business units.  Not to be confused with the standard Salesforce object CaseTeam.</description>
    <label>Case Team</label>
    <nameField>
        <displayFormat>CTN-{0000}</displayFormat>
        <label>Case Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>