force-app/main/default/objects/Case_Team__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <description>List pulled from the user.business_unit__c picklist.</description>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Omnitracs MX</fullName>
            </value>
            <value>
                <fullName>Omnitracs US</fullName>
            </value>
            <value>
                <fullName>Roadnet</fullName>
            </value>
            <value>
                <fullName>Sylectus</fullName>
            </value>
            <value>
                <fullName>XRS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>