force-app/main/default/objects/Case_Team__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Teams1</relationshipName>
    <type>Lookup</type>
</CustomField>