force-app/main/default/objects/Case_Team__c/listViews/Scott_Jacobs.listView-meta.xml
<ListView>
    <fullName>Scott_Jacobs</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Group_Name__c</columns>
    <columns>User__c</columns>
    <columns>Business_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lead__c</field>
        <operation>contains</operation>
        <value>Scott Jacobs</value>
    </filters>
    <label>Scott Jacobs Team</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>